support Java11 and above